# urbane-project-bkps

./: README.md
client-backup/urbaneclient/: __init__.py  client.py  shell.py
etc-configs/signup/: config.py  signup.conf
etc-configs/signup/assets/default/: doc
etc-configs/signup/signup/templates/: error.html  index.html  success.html
etc-configs/urbane/: signup.conf  urbane.conf
etc-configs/urbane/assets/default/: doc
fromdashboard/signups/: .gitignore  common.py  forms.py  panel.py  tables.py  urls.py  utils.py  views.py
fromdashboard/urbaneclient/: client.py
python-urbaneclient/: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  version
python-urbaneclient/urbaneclient/: client-v3.py  client.py  shell.py
urbane/: README.md  config.py  requirements.txt  setup.cfg  setup.py  urbane.conf  urbane.sh
urbane-webapp/: .gitignore  README.md  config.py  requirements.txt  setup.cfg  setup.py  signup.conf  signup.sh
urbane-webapp/.github/: ISSUE_TEMPLATE
urbane-webapp/public/app/: main.js
urbane-webapp/signup/: app.py  utils.py
urbane-webapp/signup/controllers/: root.py
urbane-webapp/signup/tests/: config.py  test_functional.py
urbane/urbane/: app.py  hooks.py  utils.py
urbane/urbane/controllers/: root-v3.py  root.py
urbane/urbane/formatters/: __init__.py  common.py  openstack.py
urbane/urbane/model/: __init__.py
urbane/urbane/templates/: welcome_email.html  welcome_email.text
urbane/urbane/tests/: config.py  test_functional.py
urbane/urbane/verifiers/: __init__.py  authnet.py  ccard.py  minfraud.py
(+21 files in other folders)
